# xcore_usb_midi_synth

./: .cproject  .project  CMakeLists.txt  Makefile  README.md
src/: FreeRTOSConfig.h  app_conf.h  main.c  midi_sequencer.c  midi_sequencer.h
src/gpio_test/: gpio_test.c
src/platform/: driver_instances.c  driver_instances.h  platform_init.c  platform_start.c
src/synth/: synth.c  synth.h  synth_wave_table.c  synth_wave_table.h
src/usb/: tusb_config.h  usb_audio.c  usb_descriptors.c  usb_descriptors.h  usb_midi.c
